# bluetape-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.ko.md  README.md  WIP.md
.github/workflows/: ci.yml  nightly-tests.yml
benchmark/compression-benchmark/: Cargo.toml  README.ko.md  README.md
benchmark/compression-benchmark/go/: compression_matrix_test.go  go.mod  go.sum
benchmark/compression-benchmark/go/cmd/generate-payloads/: main.go
benchmark/compression-benchmark/scripts/: normalize_csv.py  render_report.py
benchmark/compression-benchmark/src/: main.rs
crates/async/: Cargo.toml  README.ko.md  README.md
crates/async/src/: control.rs  lib.rs  task_group.rs
crates/async/tests/: deterministic_async.rs
crates/codec/: Cargo.toml  README.ko.md  README.md
crates/codec/src/: base58.rs  base62.rs  base64.rs  base_n.rs  hex.rs  lib.rs  text.rs
crates/codec/tests/: base58.rs  base62.rs  base64.rs  hex.rs  text.rs
crates/collections/: Cargo.toml  README.ko.md  README.md
crates/collections/src/: error.rs  iter.rs  lib.rs  map.rs  page.rs  slice.rs
crates/compression/: Cargo.toml  README.ko.md  README.md
crates/compression/src/: config.rs  error.rs  lib.rs  registry.rs  stream.rs  traits.rs
crates/compression/src/adapters/: common.rs  deflate.rs  flate.rs  gzip.rs  lz4.rs  mod.rs  snappy.rs  zlib.rs  zstd.rs
crates/compression/tests/: compression.rs
crates/core/: Cargo.toml  README.ko.md  README.md
crates/core/src/: error.rs  hex.rs  lib.rs  number.rs  string.rs  tests.rs
crates/logging/: Cargo.toml  README.ko.md  README.md
crates/logging/src/: capture.rs  correlation.rs  lib.rs  subscriber.rs  tests.rs
crates/serialization/: Cargo.toml  README.ko.md  README.md
crates/serialization/src/: config.rs  error.rs  format.rs  lib.rs  metadata.rs  traits.rs  trust.rs
crates/serialization/tests/: contracts.rs
crates/test/: Cargo.toml  README.ko.md  README.md
crates/test/src/: async_assert.rs  concurrent.rs  lib.rs  temp_dir.rs  tests.rs
docs/benchmark/: compression-fixtures-manifest.csv  compression-same-condition-benchmark.md  compression-same-condition-go.csv  compression-same-condition-jvm.csv  compression-same-condition-metadata.md  compression-same-condition-rust.csv
docs/benchmark/raw/: go-same-condition.txt
docs/images/readme-diagrams/: bluetape-rs-async-crate.dot  bluetape-rs-async-crate.plain  bluetape-rs-collections-crate.dot  bluetape-rs-collections-crate.plain  bluetape-rs-core-crate.dot  bluetape-rs-core-crate.plain  bluetape-rs-logging-crate.dot  bluetape-rs-logging-crate.plain  bluetape-rs-test-crate.dot  bluetape-rs-test-crate.plain  bluetape-rs-workspace-overview.dot  bluetape-rs-workspace-overview.plain
docs/lessons/: 2026-06-10-base58-base62-codec.md  2026-06-10-base64-codec.md  2026-06-10-codec-crate-bootstrap.md  2026-06-10-codec-test-layout.md  2026-06-10-codec-text-boundaries.md  2026-06-10-release-branch-policy.md  2026-06-10-strict-hex-codec.md  2026-06-10-v0.3.0-codec-readiness.md  2026-06-10-workspace-release-version-alignment.md  2026-06-11-compression-benchmark-reproducibility.md  2026-06-11-compression-contracts-review.md  2026-06-13-serialization-contracts.md  2026-06-13-serialization-crate-bootstrap.md
docs/release/: 2026-06-10-v0.3.0-codec-readiness.md  2026-06-10-v0.3.1-workspace-correction.md  2026-06-11-v0.4.0-compression-readiness.md  release-guide.md
docs/research/: 2026-06-08-backend-library-feasibility.md  2026-06-10-bluetape4k-core-collections-gap-analysis.md  README.md
docs/review/: 2026-06-10-0-1-coverage-review.md  2026-06-10-0-2-test-hardening-review.md  2026-06-10-async-module-split-review.md  2026-06-10-async-timeout-shutdown-review.md  2026-06-10-base58-base62-codec-review.md  2026-06-10-base64-codec-review.md  2026-06-10-ci-nightly-actions-review.md  2026-06-10-codec-crate-bootstrap-review.md  2026-06-10-codec-test-layout-review.md  2026-06-10-codec-text-boundaries-review.md  2026-06-10-collection-helpers-review.md  2026-06-10-collections-crate-review.md  2026-06-10-deterministic-async-tests-review.md  2026-06-10-docs-0-2-scope-review.md  2026-06-10-module-split-review.md  2026-06-10-pagination-value-types-review.md  2026-06-10-readme-diagrams-review.md  2026-06-10-release-branch-policy-review.md  2026-06-10-rustdoc-foundation-review.md  2026-06-10-slice-list-boundary-review.md  2026-06-10-strict-hex-codec-review.md  2026-06-10-tokio-task-group-review.md  2026-06-10-v0.1.1-release-review.md  2026-06-10-v0.3.0-codec-readiness-review.md  2026-06-10-v0.3.1-workspace-correction-review.md  2026-06-11-issue-103-multilingual-readmes-review.md  2026-06-11-issue-75-compression-contracts-review.md  2026-06-11-issue-80-v0.4.0-release-readiness-review.md  2026-06-11-issue-81-82-benchmark-evidence-review.md  2026-06-11-issue-83-compression-benchmark-review.md  2026-06-13-issue-108-plan-review.md  2026-06-13-issue-108-serialization-crate-review.md  2026-06-13-issue-108-spec-review.md  2026-06-13-issue-109-serialization-contracts-review.md
docs/superpowers/plans/: 2026-06-13-serialization-contracts-plan.md  2026-06-13-serialization-crate-bootstrap-plan.md
docs/superpowers/reviews/: 2026-06-13-serialization-contracts-plan-review.md  2026-06-13-serialization-contracts-spec-review.md
docs/superpowers/specs/: 2026-06-13-serde-0-5x-design.md  2026-06-13-serialization-contracts-design.md
src/: lib.rs
