[package]
name = "bluetape-rs"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Rust backend primitives for the bluetape ecosystem."
license = "MIT"
repository = "https://github.com/bluetape4k/bluetape-rs"
readme = "README.md"
keywords = ["backend", "validation", "logging", "testing", "rust"]
categories = ["development-tools", "asynchronous"]

[workspace]
members = [
    "crates/async",
    "crates/codec",
    "crates/collections",
    "crates/core",
    "crates/logging",
    "crates/test",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bluetape4k/bluetape-rs"

[workspace.dependencies]
base64 = "0.22.1"
bluetape-rs-codec = { path = "crates/codec", version = "0.3.0" }
bluetape-rs-collections = { path = "crates/collections", version = "0.2.0" }
bluetape-rs-async = { path = "crates/async", version = "0.2.0" }
bluetape-rs-core = { path = "crates/core", version = "0.1.1" }
bluetape-rs-logging = { path = "crates/logging", version = "0.1.1" }
bluetape-rs-test = { path = "crates/test", version = "0.1.1" }
tokio = { version = "1.48.0", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false }

[lib]
name = "bluetape_rs"
path = "src/lib.rs"

[features]
default = ["core"]
codec = ["dep:bluetape-rs-codec"]
collections = ["dep:bluetape-rs-collections"]
async = ["dep:bluetape-rs-async"]
core = ["dep:bluetape-rs-core"]
logging = ["dep:bluetape-rs-logging"]
test = ["dep:bluetape-rs-test"]

[dependencies]
bluetape-rs-codec = { workspace = true, optional = true }
bluetape-rs-collections = { workspace = true, optional = true }
bluetape-rs-async = { workspace = true, optional = true }
bluetape-rs-core = { workspace = true, optional = true }
bluetape-rs-logging = { workspace = true, optional = true }
bluetape-rs-test = { workspace = true, optional = true }
