[package]
name = "bluetape-rs-collections"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Focused collection and iterator helpers for bluetape-rs."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["collections", "iterators", "helpers"]
categories = ["data-structures", "development-tools"]

[lib]
name = "bluetape_rs_collections"
path = "src/lib.rs"

[dependencies]
